# mips-emulator

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/mips-emulator/: elf-loader.hpp  emulator.hpp  executor.hpp  instruction.hpp  memory.hpp  memory_error.hpp  register_file.hpp  register_name.hpp  register_state.hpp  result.hpp  runtime_static_memory.hpp  span.hpp  static_memory.hpp
tests/: CMakeLists.txt  executor.cpp  instruction.cpp  register_file.cpp  register_state.cpp
tests/executor/: itype.cpp  jtype.cpp  pcrel.cpp  regimm.cpp  rtype.cpp  special3.cpp
